--- a/confsvr/src/main/resources/application.yml
+++ b/confsvr/src/main/resources/application.yml
@@ -10,37 +10,40 @@
 
 
 ####################################
-server:
-  port: 8888
-spring:
-  cloud:
-    config:
-      discovery:
-        enabled: true
-      server:
-        encrypt.enabled: false
-        git:
-          uri: https://github.com/carnellj/config-repo/
-          searchPaths: licensingservice,organizationservice,specialroutesservice,zuulservice,authenticationservice
-          username: native-cloud-apps
-          password: 0ffended
+#server:
+#  port: 8888
+#spring:
+#  cloud:
+#    config:
+#      discovery:
+#        enabled: true
+#      server:
+#        encrypt.enabled: false
+#        git:
+#          uri: https://github.com/carnellj/config-repo/
+#          searchPaths: licensingservice,organizationservice,specialroutesservice,zuulservice,authenticationservice
+#          username: native-cloud-apps
+#          password: 0ffended
 
 
 ####
 #Classpath and file-based solution
 ####
 
-#server:
-#   port: 8888
-#spring:
-#  profiles:
-#    active: native
-#  cloud:
-#     config:
-#       server:
-#           native:
-#              searchLocations: file://<chapter 3>/confsvr/src/main/resources/config/licensingservice,
-#                               file://<chapter 3>confsvr/src/main/resources/config/organizationservice
+server:
+   port: 8888
+spring:
+  profiles:
+    active: native
+  cloud:
+     config:
+       server:
+           native:
+              searchLocations: file:///C:\Users\Administrator\git\config-repo\authenticationservice,
+                               file:///C:\Users\Administrator\git\config-repo\licensingservice,
+                               file:///C:\Users\Administrator\git\config-repo\organizationservice,
+                               file:///C:\Users\Administrator\git\config-repo\specialroutesservice,
+                               file:///C:\Users\Administrator\git\config-repo\zuulservice
 ##              #searchLocations: classpath:config/,classpath:config/licensingservice
 
 
